--- a/MyPad/Views/Styles/Controls/AvalonEdit.xaml
+++ b/MyPad/Views/Styles/Controls/AvalonEdit.xaml
@@ -114,12 +114,12 @@
                                 <mi:Modern Kind="MagnifyArrowDown"/>
                             </Button>
                             <ToggleButton Grid.Row="0" Grid.Column="7" 
-                                          IsChecked="{Binding MatchCase, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}"
+                                          IsChecked="{Binding MatchCase, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                           ToolTip="{Binding Localization.MatchCaseText, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}">
                                 <mi:Material Kind="CaseSensitiveAlt"/>
                             </ToggleButton>
                             <ToggleButton Grid.Row="0" Grid.Column="8"
-                                          IsChecked="{Binding UseRegex, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}"
+                                          IsChecked="{Binding UseRegex, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                           ToolTip="{Binding Localization.UseRegexText, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay}">
                                 <mi:Material Kind="Regex"/>
                             </ToggleButton>
