--- a/MyPad/Views/Regions/OptionContentView.xaml
+++ b/MyPad/Views/Regions/OptionContentView.xaml
@@ -102,6 +102,7 @@
                                 <CheckBox IsChecked="{Binding ShowFullName, Mode=TwoWay}"           Content="{le:Loc LabelText_ShowFullName}"/>
                                 <CheckBox IsChecked="{Binding ShowFileIcon, Mode=TwoWay}"           Content="{le:Loc LabelText_ShowFileIcon}"/>
                                 <CheckBox IsChecked="{Binding ShowSingleTab, Mode=TwoWay}"          Content="{le:Loc LabelText_ShowSingleTab}"/>
+                                <CheckBox IsChecked="{Binding ShowInlineDiffViewer, Mode=TwoWay}"   Content="{le:Loc LabelText_ShowInlineDiffViewer}"/>
                             </StackPanel>
                         </StackPanel>
 
