--- a/MyPad/Views/Styles/Generic.xaml
+++ b/MyPad/Views/Styles/Generic.xaml
@@ -7,6 +7,7 @@
     
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="./Controls/AvalonEdit.xaml"/>
+        <ResourceDictionary Source="./Controls/DiffViewer.xaml"/>
         <ResourceDictionary Source="./Controls/Dragablz.xaml"/>
         <ResourceDictionary Source="./Controls/ToastNotifications.xaml"/>
     </ResourceDictionary.MergedDictionaries>
