[update] 免責事項を追加

--- a/MyPad/Views/Regions/AboutContentView.xaml
+++ b/MyPad/Views/Regions/AboutContentView.xaml
@@ -17,14 +17,17 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid Margin="20 0 20 20" ge:GridEx.RowDefinition="Auto, 15, Auto, 15, *">
-        <Grid Grid.Row="0" Margin="20 0" ge:GridEx.ColumnDefinition="Auto, 20, Auto, 20, Auto, 10, Auto">
+        <Grid Grid.Row="0" Margin="20 0" ge:GridEx.ColumnDefinition="Auto, 20, Auto, 20, Auto, 15, Auto, 15, Auto">
             <TextBlock Grid.Column="0" Text="{Binding ProductInfo.Product, Mode=OneWay}" FontWeight="Bold" FontSize="32" VerticalAlignment="Center"/>
             <TextBlock Grid.Column="2" TextWrapping="Wrap" VerticalAlignment="Center">
                 <Run Text="{qc:MultiBinding '\'Version \' + $P0 + ($P1 ? \' - Debug Build\' : null)', P0={Binding ProductInfo.Version, Mode=OneWay}, P1={Binding ProductInfo.IsDebugBuild, Mode=OneWay}}"/>
                 <LineBreak/>
                 <Run Text="{Binding ProductInfo.Copyright, Mode=OneWay}"/>
             </TextBlock>
-            <Button Grid.Column="4" Style="{StaticResource Common.CircleButton}" ToolTip="{le:Loc Command_Repository}" VerticalAlignment="Center">
+            <Button Grid.Column="4" Command="{Binding DisclaimerCommand, Mode=OneTime}"  Style="{StaticResource Common.CircleButton}" ToolTip="{le:Loc Command_Disclaimer}" VerticalAlignment="Center">
+                <mi:FontAwesome Kind="FileContractSolid"/>
+            </Button>
+            <Button Grid.Column="6" Style="{StaticResource Common.CircleButton}" ToolTip="{le:Loc Command_Repository}" VerticalAlignment="Center">
                 <i:Interaction.Triggers>
                     <i:EventTrigger EventName="Click">
                         <behaviors:ProcessStartAction FileName="cmd.exe" Arguments="{qc:Binding '\'/c start \' + $P', P={Binding Source={x:Static root:AppSettings.ProjectSite}, Mode=OneWay}}" CreateNoWindow="True" ThrowException="False"/>
@@ -32,7 +35,7 @@
                 </i:Interaction.Triggers>
                 <mi:Material Kind="Github"/>
             </Button>
-            <Button Grid.Column="6" Style="{StaticResource Common.CircleButton}" ToolTipService.ShowDuration="10000" VerticalAlignment="Center">
+            <Button Grid.Column="8" Style="{StaticResource Common.CircleButton}" ToolTipService.ShowDuration="10000" VerticalAlignment="Center">
                 <Button.ToolTip>
                     <StackPanel>
                         <TextBlock Text="{le:Loc Command_Donate}" FontSize="14"/>
