--- a/MyPad/Views/Regions/OptionContentView.xaml
+++ b/MyPad/Views/Regions/OptionContentView.xaml
@@ -56,7 +56,7 @@
         <TabItem DataContext="{Binding SettingsService.System, Mode=OneWay}" Header="{le:Loc Label_System}">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled">
                 <StackPanel>
-                    <Grid ge:GridEx.ColumnDefinition="Auto, *" ge:GridEx.RowDefinition="Auto, Auto, Auto, Auto, Auto">
+                    <Grid ge:GridEx.ColumnDefinition="Auto, *" ge:GridEx.RowDefinition="Auto, Auto, Auto, Auto, Auto, Auto">
                         <Label      Grid.Row="0" Grid.Column="0" Content="{le:Loc Label_Theme}"/>
                         <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
                             <RadioButton Content="{le:Loc Label_SyncAppTheme}" IsChecked="{qc:Binding Convert='(int)$P == 0', ConvertBack='$value ? 0 : DependencyProperty.UnsetValue', P={Binding Theme, Mode=TwoWay}}"/>
@@ -91,6 +91,18 @@
                                 </DataTemplate>
                             </ComboBox.ItemTemplate>
                         </ComboBox>
+
+                        <Label Grid.Row="5" Grid.Column="0" Content="{le:Loc Label_Font}"/>
+                        <Grid  Grid.Row="5" Grid.Column="1" ge:GridEx.ColumnDefinition="5*, *(50-)" DataContext="{Binding DataContext.SettingsService.TextEditor, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}, Mode=OneWay}">
+                            <ComboBox Grid.Column="0" SelectedValue="{Binding FontFamily, Mode=TwoWay}" ItemsSource="{x:Static root:Constants.FONT_FAMILIES}">
+                                <ComboBox.ItemTemplate>
+                                    <DataTemplate>
+                                        <TextBlock Text="{Binding Converter={converters:FontFamilyToNameConverter}}" FontFamily="{Binding}"/>
+                                    </DataTemplate>
+                                </ComboBox.ItemTemplate>
+                            </ComboBox>
+                            <ComboBox Grid.Column="1" SelectedValue="{Binding ActualFontSize, Mode=TwoWay}" ItemsSource="{x:Static root:Constants.FONT_SIZES}"/>
+                        </Grid>
                     </Grid>
 
                     <Border Height="10"/>
@@ -129,20 +141,6 @@
         <TabItem DataContext="{Binding SettingsService.TextEditor, Mode=OneWay}" Header="{le:Loc Label_TextEditor}">
             <ScrollViewer HorizontalScrollBarVisibility="Disabled">
                 <StackPanel>
-                    <Grid ge:GridEx.ColumnDefinition="Auto, 5*, *(50-)">
-                        <Label Grid.Column="0" Content="{le:Loc Label_Font}"/>
-                        <ComboBox Grid.Column="1" SelectedValue="{Binding FontFamily, Mode=TwoWay}" ItemsSource="{x:Static root:Constants.FONT_FAMILIES}">
-                            <ComboBox.ItemTemplate>
-                                <DataTemplate>
-                                    <TextBlock Text="{Binding Converter={converters:FontFamilyToNameConverter}}" FontFamily="{Binding}"/>
-                                </DataTemplate>
-                            </ComboBox.ItemTemplate>
-                        </ComboBox>
-                        <ComboBox Grid.Column="2" SelectedValue="{Binding ActualFontSize, Mode=TwoWay}" ItemsSource="{x:Static root:Constants.FONT_SIZES}"/>
-                    </Grid>
-
-                    <Border Height="10"/>
-
                     <ge:ResponsiveGrid>
                         <StackPanel ge:ResponsiveGrid.XS="12" ge:ResponsiveGrid.SM="6" Margin="5">
                             <StackPanel>
@@ -207,32 +205,10 @@
                 </Style>
             </TabItem.Resources>
             <ScrollViewer HorizontalScrollBarVisibility="Disabled">
-                <Grid ge:GridEx.ColumnDefinition="Auto, *, 5, Auto, Auto" ge:GridEx.RowDefinition="Auto, Auto, 10, Auto, Auto, Auto, Auto, Auto">
-                    <Label   Grid.Row="0" Grid.Column="0" Content="{le:Loc Label_ExecutionFile}"/>
-                    <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding ProductInfo.Location, Mode=OneWay}" IsReadOnly="True"/>
+                <Grid ge:GridEx.ColumnDefinition="Auto, *, 5, Auto, Auto" ge:GridEx.RowDefinition="Auto, Auto, Auto">
+                    <Label   Grid.Row="0" Grid.Column="0" Content="{le:Loc Label_ExecutionDirectory}"/>
+                    <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding ProductInfo.Working, Mode=OneWay}" IsReadOnly="True"/>
                     <Button  Grid.Row="0" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Click">
-                                <behaviors:ProcessStartAction FileName="explorer.exe" Arguments="{qc:Binding '\'/select, \' + $P', P={Binding ProductInfo.Location, Mode=OneWay}}" ThrowException="False"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <mi:Modern Kind="FolderOpen"/>
-                    </Button>
-                    
-                    <Label   Grid.Row="1" Grid.Column="0" Content="{le:Loc Label_SettingFile}"/>
-                    <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding SettingsService.FilePath, Mode=OneWay}" IsReadOnly="True"/>
-                    <Button  Grid.Row="1" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Click">
-                                <behaviors:ProcessStartAction FileName="explorer.exe" Arguments="{qc:Binding '\'/select, \' + $P', P={Binding SettingsService.FilePath, Mode=OneWay}}" ThrowException="False"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <mi:Modern Kind="FolderOpen"/>
-                    </Button>
-
-                    <Label   Grid.Row="3" Grid.Column="0" Content="{le:Loc Label_ExecutionDirectory}"/>
-                    <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding ProductInfo.Working, Mode=OneWay}" IsReadOnly="True"/>
-                    <Button  Grid.Row="3" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="Click">
                                 <behaviors:ProcessStartAction FileName="explorer.exe" Arguments="{Binding ProductInfo.Working, Mode=OneWay}" ThrowException="False"/>
@@ -240,41 +216,10 @@
                         </i:Interaction.Triggers>
                         <mi:Modern Kind="FolderOpen"/>
                     </Button>
-
-                    <Label   Grid.Row="4" Grid.Column="0" Content="{le:Loc Label_RoamingDirectory}"/>
-                    <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding ProductInfo.Roaming, Mode=OneWay}" IsReadOnly="True"/>
-                    <Button  Grid.Row="4" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Click">
-                                <behaviors:ProcessStartAction FileName="explorer.exe" Arguments="{Binding ProductInfo.Roaming, Mode=OneWay}" ThrowException="False"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <mi:Modern Kind="FolderOpen"/>
-                    </Button>
-
-                    <Label   Grid.Row="5" Grid.Column="0" Content="{le:Loc Label_XshdDirectory}"/>
-                    <TextBox Grid.Row="5" Grid.Column="1" Text="{Binding SyntaxService.DirectoryPath, Mode=OneWay}" IsReadOnly="True"/>
-                    <Button  Grid.Row="5" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}" BorderThickness="1 1 0 1">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="Click">
-                                <behaviors:ProcessStartAction FileName="explorer.exe" Arguments="{Binding SyntaxService.DirectoryPath, Mode=OneWay}" ThrowException="False"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
-                        <mi:Modern Kind="FolderOpen"/>
-                    </Button>
-                    <m:DropDownButton Grid.Row="5" Grid.Column="4" Style="{StaticResource IconDropDownButton}" Height="27" BorderThickness="0 1 1 1">
-                        <m:DropDownButton.Items>
-                            <MenuItem Command="{Binding DataContext.InitializeSyntaxCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneTime}" Header="{le:Loc Command_Initialize}">
-                                <MenuItem.Icon>
-                                    <mi:Modern Kind="New"/>
-                                </MenuItem.Icon>
-                            </MenuItem>
-                        </m:DropDownButton.Items>
-                    </m:DropDownButton>
-
-                    <Label   Grid.Row="7" Grid.Column="0" Content="{le:Loc Label_TempDirectory}"/>
-                    <TextBox Grid.Row="7" Grid.Column="1" Text="{Binding ProductInfo.Temporary, Mode=OneWay}" IsReadOnly="True"/>
-                    <Button  Grid.Row="7" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
+                    
+                    <Label   Grid.Row="1" Grid.Column="0" Content="{le:Loc Label_TempDirectory}"/>
+                    <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding ProductInfo.Temporary, Mode=OneWay}" IsReadOnly="True"/>
+                    <Button  Grid.Row="1" Grid.Column="3" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="Click">
                                 <behaviors:ProcessStartAction FileName="explorer.exe" Arguments="{Binding ProductInfo.Temporary, Mode=OneWay}" ThrowException="False"/>
@@ -282,6 +227,26 @@
                         </i:Interaction.Triggers>
                         <mi:Modern Kind="FolderOpen"/>
                     </Button>
+
+                    <Label   Grid.Row="2" Grid.Column="0" Content="{le:Loc Label_AppDataDirectory}"/>
+                    <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding ProductInfo.Roaming, Mode=OneWay}" IsReadOnly="True"/>
+                    <Button  Grid.Row="2" Grid.Column="3" Command="{Binding OpenAppDataDirectoryCommand, Mode=OneTime}" ToolTip="{le:Loc Command_Open}" Style="{StaticResource IconButton}" BorderThickness="1 1 0 1">
+                        <mi:Modern Kind="FolderOpen"/>
+                    </Button>
+                    <m:DropDownButton Grid.Row="2" Grid.Column="4" Style="{StaticResource IconDropDownButton}" BorderThickness="0 1 1 1" Height="27">
+                        <m:DropDownButton.Items>
+                            <MenuItem Command="{Binding ExportLogArchiveCommand, Mode=OneTime}" Header="{le:Loc Command_ExportLog}">
+                                <MenuItem.Icon>
+                                    <mi:Material Kind="Archive"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                            <MenuItem Command="{Binding InitializeSyntaxCommand, Mode=OneTime}" Header="{le:Loc Command_InitializeSyntax}">
+                                <MenuItem.Icon>
+                                    <mi:Modern Kind="New"/>
+                                </MenuItem.Icon>
+                            </MenuItem>
+                        </m:DropDownButton.Items>
+                    </m:DropDownButton>
                 </Grid>
             </ScrollViewer>
         </TabItem>
